# ray_tracer

./: CMakeLists.txt  illuminant.cpp  illuminant.h  main.cpp  material.cpp  material.h  object.cpp  object.h  quadrilateral.cpp  quadrilateral.h  ray.cpp  ray.h  ray_tracer.cpp  ray_tracer.h  rt_parser.cpp  rt_parser.h  screen.cpp  screen.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  vector3d.cpp  vector3d.h
samples/: sample1.rt  sample2.rt  sample3.rt  sample4.rt
